# LovingFastAPI

./: README.md  pyproject.toml
1/: main.py
2/: main.py
3/: main.py
4/: main.py
Example2/: main.py
Example3/: main.py
Example3/data/: user_data.py
