[tool.poetry]
name = "fastaustin"
version = "0.1.0"
description = ""
authors = ["JohnathanBaldera <74841308+JohnathanBaldera@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.0"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
